feat(backend/chat):强制刷新SSE缓冲区，确保数据立即发送